# lib/api-spec/openapi.yaml
@@ -702,13 +702,19 @@ components:
     # AUTH
     UserRegisterInput:
       type: object
-      required: [name, email, password, role]
+      required: [firstName, lastName, email, password, role]
       properties:
-        name:
+        firstName:
+          type: string
+        lastName:
           type: string
         email:
           type: string
         password:
+          type: string
+        phone:
+          type: string
+        address:
           type: string
         role:
           type: string
